1、修改依赖 2、修改new 功能